--- a/.gitignore
+++ b/.gitignore
@@ -16,18 +16,16 @@ coverage
 # Grunt intermediate storage (http://gruntjs.com/creating-plugins#storing-task-files)
 .grunt
 
-# node-waf configuration
-.lock-wscript
-
 # Compiled binary addons (http://nodejs.org/api/addons.html)
 build/Release
 
 # Dependency directory
-# https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git-
+# Deployed apps should consider commenting this line out:
+# see https://npmjs.org/doc/faq.html#Should-I-check-my-node_modules-folder-into-git
 node_modules
 
-# Debug log from npm
-npm-debug.log
+# Ignore .env configuration files
+.env
 
-
-public/styled/style.css
+# Ignore .DS_Store files on OS X
+.DS_Store
