--- a/package.json
+++ b/package.json
@@ -1,18 +1,29 @@
 {
-  "name": "HacKIDemia",
+  "name": "HacKIDemia SG",
   "version": "0.0.0",
   "private": true,
-  "scripts": {
-    "start": "node ./bin/www"
-  },
   "dependencies": {
-    "body-parser": "~1.10.1",
-    "cookie-parser": "~1.3.3",
-    "debug": "~2.1.1",
-    "express": "~4.11.0",
-    "hbs": "~2.8.0",
-    "morgan": "~1.5.1",
-    "serve-favicon": "~2.2.0",
-    "less-middleware": "~1.0.4"
-  }
+    "keystone": "~0.2.40",
+    "async": "~0.9.0",
+    "underscore": "~1.7.0",
+    "moment": "~2.8.1",
+    "cloudinary": "^1.0.12",
+    "express-handlebars": "~1.1.0",
+    "handlebars": "~2.0.0",
+    "dotenv": "~0.4.0"
+  },
+  "devDependencies": {
+    "gulp": "~3.7.0",
+    "gulp-jshint": "~1.9.0",
+    "jshint-stylish": "~0.1.3",
+    "gulp-watch": "~0.6.5"
+  },
+  "engines": {
+    "node": ">=0.10.22",
+    "npm": ">=1.3.14"
+  },
+  "scripts": {
+    "start": "node keystone.js"
+  },
+  "main": "keystone.js"
 }
