--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "HacKIDemia SG",
-  "version": "0.0.0",
+  "name": "HacKIDemiaEventPage",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "keystone": "~0.2.40",
@@ -23,7 +23,7 @@
     "npm": ">=1.3.14"
   },
   "scripts": {
-    "start": "node keystone.js"
+    "start": "node init.js"
   },
-  "main": "keystone.js"
+  "main": "init.js"
 }
